fix(oblique/material): make collapsed mode support th cells
OUI-3454

--- a/projects/oblique/src/styles/scss/core/mixins/_table.scss
+++ b/projects/oblique/src/styles/scss/core/mixins/_table.scss
@@ -20,7 +20,9 @@
 			left: -9999px;
 		}
 
-		td {
+		td,
+		tbody > tr > th,
+		tfoot > tr > th {
 			position: relative;
 			margin-left: variables.$ob-table-collapsed-header-width;
 			min-height: calc(
